Wensite icon added

--- a/Newsletters/april2019.html
+++ b/Newsletters/april2019.html
@@ -120,7 +120,7 @@
           width: 100% !important;
         }
         .news {
-          text-align: justify;
+          text-align: center !important;
         }
         .topics {
           text-align: center;
@@ -486,6 +486,14 @@
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/0f0d2abc-0492-4c5c-9998-4b83ea8fc8fd.png"
                                       alt="Linkedin"
+                                      width="6%"
+                                  /></a>
+                                </li>
+                                <li>
+                                  <a href="https://gcdcindore.dev"
+                                    ><img
+                                      src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-link-48.png"
+                                      alt="GcdcIndore"
                                       width="6%"
                                   /></a>
                                 </li>
