--- a/template.html
+++ b/template.html
@@ -120,7 +120,7 @@
           width: 100% !important;
         }
         .news {
-          text-align: justify;
+          text-align: center !important;
         }
         .topics {
           text-align: center;
@@ -291,7 +291,7 @@
                         <td>
                           <div class="news">
                             <h3 class="news-title">Lorem, ipsum dolor.</h3>
-                            <ol class="news-list">
+                            <ul class="news-list">
                               <li>
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Vitae, voluptate!
@@ -344,7 +344,7 @@
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Rerum, nesciunt!
                               </li>
-                            </ol>
+                            </ul>
                           </div>
                         </td>
                       </tr>
@@ -352,7 +352,7 @@
                         <td>
                           <div class="news">
                             <h3 class="news-title">Lorem, ipsum dolor.</h3>
-                            <ol class="news-list">
+                            <ul class="news-list">
                               <li>
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Vitae, voluptate!
@@ -373,7 +373,7 @@
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Vitae, voluptate!
                               </li>
-                            </ol>
+                            </ul>
                           </div>
                         </td>
                       </tr>
@@ -381,7 +381,7 @@
                         <td>
                           <div class="news">
                             <h3 class="news-title">Lorem, ipsum dolor.</h3>
-                            <ol class="news-list">
+                            <ul class="news-list">
                               <li>
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Vitae, voluptate!
@@ -434,7 +434,7 @@
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Rerum, nesciunt!
                               </li>
-                            </ol>
+                            </ul>
                           </div>
                         </td>
                       </tr>
@@ -486,6 +486,14 @@
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/0f0d2abc-0492-4c5c-9998-4b83ea8fc8fd.png"
                                       alt="Linkedin"
+                                      width="6%"
+                                  /></a>
+                                </li>
+                                <li>
+                                  <a href="https://gcdcindore.dev"
+                                    ><img
+                                      src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-link-48.png"
+                                      alt="GcdcIndore"
                                       width="6%"
                                   /></a>
                                 </li>
