--- a/Newsletters/april2019.html
+++ b/Newsletters/april2019.html
@@ -121,6 +121,7 @@
         }
         .news {
           text-align: center !important;
+          width: 95% !important;
         }
         .topics {
           text-align: center;
@@ -489,7 +490,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li>
+                                <li style="display: inline">
                                   <a href="https://gcdcindore.dev"
                                     ><img
                                       src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-link-48.png"
