--- a/Newsletters/april2019.html
+++ b/Newsletters/april2019.html
@@ -123,8 +123,8 @@
           text-align: center !important;
         }
         .topics {
-          text-align: center;
-          width: 95% !important;
+          text-align: center !important;
+          width: 90% !important;
         }
         #social,
         #social-icons {
@@ -134,7 +134,7 @@
           width: 100% !important;
         }
         #icons-list li {
-          margin: 0 1em 0 0;
+          margin: 0 1em 0 0 !important;
         }
       }
     </style>
