--- a/template.html
+++ b/template.html
@@ -121,6 +121,7 @@
         }
         .news {
           text-align: center !important;
+          width: 90% !important;
         }
         .topics {
           text-align: center;
@@ -289,153 +290,159 @@
                     <table class="topics" cellspacing="0" cellpadding="0">
                       <tr>
                         <td>
-                          <div class="news">
-                            <h3 class="news-title">Lorem, ipsum dolor.</h3>
-                            <ul class="news-list">
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                            </ul>
-                          </div>
+                          <center>
+                            <div class="news">
+                              <h3 class="news-title">Lorem, ipsum dolor.</h3>
+                              <ul class="news-list">
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                              </ul>
+                            </div>
+                          </center>
                         </td>
                       </tr>
                       <tr>
                         <td>
-                          <div class="news">
-                            <h3 class="news-title">Lorem, ipsum dolor.</h3>
-                            <ul class="news-list">
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                            </ul>
-                          </div>
+                          <center>
+                            <div class="news">
+                              <h3 class="news-title">Lorem, ipsum dolor.</h3>
+                              <ul class="news-list">
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                              </ul>
+                            </div>
+                          </center>
                         </td>
                       </tr>
                       <tr>
                         <td>
-                          <div class="news">
-                            <h3 class="news-title">Lorem, ipsum dolor.</h3>
-                            <ul class="news-list">
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Vitae, voluptate!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                              <li>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Rerum, nesciunt!
-                              </li>
-                            </ul>
-                          </div>
+                          <center>
+                            <div class="news">
+                              <h3 class="news-title">Lorem, ipsum dolor.</h3>
+                              <ul class="news-list">
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet, consectetur
+                                  adipisicing elit. Vitae, voluptate!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                                <li>
+                                  Lorem ipsum dolor sit amet consectetur
+                                  adipisicing elit. Rerum, nesciunt!
+                                </li>
+                              </ul>
+                            </div>
+                          </center>
                         </td>
                       </tr>
                     </table>
