--- a/Newsletters/april2019.html
+++ b/Newsletters/april2019.html
@@ -84,14 +84,38 @@
         margin: 0 20px 0 0;
       }
 
+      @media screen and (max-width: 1080px) {
+        #viewinbrowser,
+        #gcdclink {
+          float: none !important;
+          display: block !important;
+          text-align: center !important;
+          font-size: 0.8em !important;
+        }
+      }
+
       @media screen and (max-width: 768px) and (min-width: 678px) {
         .container-table {
           width: 80% !important;
+        }
+        #viewinbrowser,
+        #gcdclink {
+          float: none !important;
+          display: block !important;
+          text-align: center !important;
+          font-size: 0.8em !important;
         }
       }
       @media screen and (max-width: 678px) and (min-width: 600px) {
         .container-table {
           width: 90% !important;
+        }
+        #viewinbrowser,
+        #gcdclink {
+          float: none !important;
+          display: block !important;
+          text-align: center !important;
+          font-size: 0.8em !important;
         }
       }
       @media screen and (max-width: 600px) {
@@ -127,7 +151,6 @@
           display: block !important;
           text-align: center !important;
           float: none !important;
-
           width: 100% !important;
         }
         .news {
@@ -166,7 +189,7 @@
             <center>
               <table
                 class="container-table"
-                width="70%"
+                width="60%"
                 cellspacing="0"
                 cellpadding="0"
               >
@@ -472,7 +495,7 @@
                               id="social-icons"
                             >
                               <ul id="icons-list" style="list-style:none; ">
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a href="https://www.facebook.com/gcdcindore/"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/5d598183-0ebe-437a-a45c-b2f68c1d905f.png"
@@ -480,7 +503,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a href="https://twitter.com/gcdcIndore"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/20b26c35-b020-4ea2-a756-995d9a188cd2.png"
@@ -488,7 +511,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a
                                     href="https://www.instagram.com/gcdcindore/"
                                     ><img
@@ -497,7 +520,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a
                                     href="https://www.linkedin.com/in/google-cloud-developers-community-indore-984651172"
                                     ><img
@@ -506,7 +529,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a href="https://gcdcindore.dev"
                                     ><img
                                       src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-link-48.png"
@@ -514,7 +537,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px;">
                                   <a
                                     href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
                                     ><img
