--- a/template.html
+++ b/template.html
@@ -83,7 +83,42 @@
       .icons-list li {
         margin: 0 20px 0 0;
       }
-      @media screen and (max-width: 480px) {
+
+      @media screen and (max-width: 1080px) {
+        #viewinbrowser,
+        #gcdclink {
+          float: none !important;
+          display: block !important;
+          text-align: center !important;
+          font-size: 0.8em !important;
+        }
+      }
+
+      @media screen and (max-width: 768px) and (min-width: 678px) {
+        .container-table {
+          width: 80% !important;
+        }
+        #viewinbrowser,
+        #gcdclink {
+          float: none !important;
+          display: block !important;
+          text-align: center !important;
+          font-size: 0.8em !important;
+        }
+      }
+      @media screen and (max-width: 678px) and (min-width: 600px) {
+        .container-table {
+          width: 90% !important;
+        }
+        #viewinbrowser,
+        #gcdclink {
+          float: none !important;
+          display: block !important;
+          text-align: center !important;
+          font-size: 0.8em !important;
+        }
+      }
+      @media screen and (max-width: 600px) {
         * {
           font-size: 0.9rem;
         }
@@ -116,15 +151,16 @@
           display: block !important;
           text-align: center !important;
           float: none !important;
-
           width: 100% !important;
         }
         .news {
+          font-size: 1em;
           text-align: center !important;
-          width: 90% !important;
+          max-width: 90% !important;
+          padding: 0 10px !important;
         }
         .topics {
-          text-align: center;
+          text-align: center !important;
         }
         #social,
         #social-icons {
@@ -134,7 +170,7 @@
           width: 100% !important;
         }
         #icons-list li {
-          margin: 0 1em 0 0;
+          margin: 0 1em 0 0 !important;
         }
       }
     </style>
@@ -462,7 +498,7 @@
                               id="social-icons"
                             >
                               <ul id="icons-list" style="list-style:none; ">
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px">
                                   <a href="https://www.facebook.com/gcdcindore/"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/5d598183-0ebe-437a-a45c-b2f68c1d905f.png"
@@ -470,7 +506,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px">
                                   <a href="https://twitter.com/gcdcIndore"
                                     ><img
                                       src="https://gallery.mailchimp.com/303ef851a601f593c6d6c14b6/images/20b26c35-b020-4ea2-a756-995d9a188cd2.png"
@@ -478,7 +514,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px">
                                   <a
                                     href="https://www.instagram.com/gcdcindore/"
                                     ><img
@@ -487,7 +523,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px">
                                   <a
                                     href="https://www.linkedin.com/in/google-cloud-developers-community-indore-984651172"
                                     ><img
@@ -496,7 +532,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li>
+                                <li style="display: inline; padding: 0 5px">
                                   <a href="https://gcdcindore.dev"
                                     ><img
                                       src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-link-48.png"
@@ -504,7 +540,7 @@
                                       width="6%"
                                   /></a>
                                 </li>
-                                <li style="display: inline">
+                                <li style="display: inline; padding: 0 5px">
                                   <a
                                     href="https://www.meetup.com/Google-Cloud-Developer-Community-Indore/"
                                     ><img
