--- a/Newsletters/april2019.html
+++ b/Newsletters/april2019.html
@@ -53,11 +53,11 @@
         text-align: justify;
       }
       .blog-link {
-        text-align: right;
         background: rgb(0, 133, 255);
         color: #ffffff;
         padding: 5px 10px;
-        margin: 0 25px;
+        float: right;
+        width: auto;
         border-radius: 5px;
       }
       a {
@@ -153,6 +153,10 @@
           float: none !important;
           width: 100% !important;
         }
+        .blog-link {
+          width: auto !important;
+          float: none !important;
+        }
         .news {
           font-size: 1em;
           text-align: center !important;
@@ -234,7 +238,7 @@
                       <tr>
                         <td>
                           <p style="display:inline-block;width:49%" id="date">
-                            <strong>April, 2019</strong>
+                            <strong>May, 2019</strong>
                           </p>
                           <p
                             style="display:inline-block;width:49%; text-align: right"
@@ -346,7 +350,7 @@
                         <td>
                           <center>
                             <div class="news">
-                              <h3 class="news-title">Lorem, ipsum dolor.</h3>
+                              <h3 class="news-title">Useful Links:</h3>
                               <ul class="news-list">
                                 <li>
                                   Open list source of all
@@ -471,6 +475,65 @@
                                     target="_blank"
                                     rel="noopener noreferrer"
                                     >TensorFlow API’s</a
+                                  >
+                                </li>
+                              </ul>
+                            </div>
+                          </center>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <center>
+                            <div class="news">
+                              <h3 class="news-title">Upcoming Events:</h3>
+                              <ul class="news-list">
+                                <li>
+                                  <a
+                                    href="https://gcdcindore.dev"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                    >Catch Google Cloud Next Extended'19 in
+                                    Indore</a
+                                  >
+                                </li>
+                                <li>
+                                  Missed
+                                  <a
+                                    href="https://cloud.withgoogle.com/next/sf/sessions?utm_medium=email-d&utm_source=newsletter&utm_team=googledevs&utm_campaign=2019-04-eng&utm_content=featuredbutton&mkt_tok=eyJpIjoiTUdKbVlqRXlNV0kzTWpOaCIsInQiOiJCc0lXeHpuSVlSY2lLOGZrV2dcL0tNZGw3YU9ldHhtWE1nOCtrT0VFTVBFek1zNDJKYWtmaUtSblN4M1BNbkJUTW1pT2FETGhrVHpwcFEwWXc2dVl2TlVwd1lkZ0hQZWZ1VVlubXl6NERneXZMZmNwdmswRmV6VmhkNGFXeGdzZFwvIn0%3D"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                  >
+                                    Google Cloud Next 2019?</a
+                                  >
+                                </li>
+                                <li>
+                                  Don’t forgot to tune into Google I/O 2019(
+                                  <a
+                                    href="https://events.google.com/io/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                    >Watch Live</a
+                                  >
+                                  )
+                                </li>
+                                <li>
+                                  Apply to
+                                  <a
+                                    href="https://developers.google.com/programs/dsc/"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                  >
+                                    Developer Student Club</a
+                                  >
+                                  (Deadline May 15)
+                                </li>
+                                <li>
+                                  <a
+                                    href="https://developer.android.com/dev-summit?utm_medium=email-d&utm_source=newsletter&utm_team=googledevs&utm_campaign=2019-04-eng&utm_content=savedate2&mkt_tok=eyJpIjoiTUdKbVlqRXlNV0kzTWpOaCIsInQiOiJCc0lXeHpuSVlSY2lLOGZrV2dcL0tNZGw3YU9ldHhtWE1nOCtrT0VFTVBFek1zNDJKYWtmaUtSblN4M1BNbkJUTW1pT2FETGhrVHpwcFEwWXc2dVl2TlVwd1lkZ0hQZWZ1VVlubXl6NERneXZMZmNwdmswRmV6VmhkNGFXeGdzZFwvIn0%3D"
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                    >Android Dev Summit 2019</a
                                   >
                                 </li>
                               </ul>
