--- a/template.html
+++ b/template.html
@@ -53,11 +53,11 @@
         text-align: justify;
       }
       .blog-link {
-        text-align: right;
         background: rgb(0, 133, 255);
         color: #ffffff;
         padding: 5px 10px;
-        margin: 0 25px;
+        float: right;
+        width: auto;
         border-radius: 5px;
       }
       a {
@@ -152,6 +152,10 @@
           text-align: center !important;
           float: none !important;
           width: 100% !important;
+        }
+        .blog-link {
+          width: auto !important;
+          float: none !important;
         }
         .news {
           font-size: 1em;
